# template-rust-python-mixed

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  justfile  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
mixed/pyo3-example/: Cargo.toml  README.md  pyproject.toml
mixed/pyo3-example/benches/: pyo3_benchmarks.rs
mixed/pyo3-example/python/pyo3_example/: __init__.py
mixed/pyo3-example/src/: lib.rs
mixed/pyo3-example/tests/: test_calculator.py  test_mixed_benchmarks.py  test_pyo3_functions.py
python/fictional-project/: README.md  pyproject.toml
python/fictional-project/src/fictional_project/: main.py
python/fictional-project/tests/test_fictional_project/: test_anchor_stream_benchmarks.py  test_main.py
rust/fictional-project/: Cargo.toml  README.md
rust/fictional-project/benches/: benchmarks.rs
rust/fictional-project/src/: lib.rs
