[project]
name = "fictional-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Malcolm Greaves", email = "greaves.malcolm@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "huggingface>=0.0.1",
    "polars>=1.35.2",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "torch>=2.9.1",
]

[project.scripts]
fictional-project = "fictional_project.main:entrypoint"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
